--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -3,8 +3,8 @@ carts:
         name: carts
     image:
         pullPolicy: IfNotPresent
-        repository: null
-        tag: null
+        repository: 10.63.242.116:5000/sockshop/carts
+        tag: 0.6.0-1
     replicaCount: 1
     resources:
         limits:
