--- a/helm-chart/templates/cartsBlue-deployment.yaml
+++ b/helm-chart/templates/cartsBlue-deployment.yaml
@@ -22,6 +22,8 @@ spec:
         env:
         - name: DT_TAGS
           value: "application={{ .Chart.Name }}"
+        - name: DT_CUSTOM_PROP
+          value: "KEPTN=0.2.0 ACLCLASS=DEMO DEPLOYMENT=BLUE"           
         ports:
         - name: internalport
           containerPort: {{ .Values.cartsBlue.service.internalPort }}
